--- a/src/pages/Registration/Registration.module.css
+++ b/src/pages/Registration/Registration.module.css
@@ -8,6 +8,24 @@
 
 .sign-up__button {
     width: 150px;
-
     margin-top: 30px;
+}
+
+.sign-up__link {
+    display: block;
+    font-size: 14px;
+    color: #71B283;
+    margin-top: 20px;
+}
+
+.sign-up__error {
+    margin-bottom: 3px;
+    color: red;
+    font-size: 12px;
+    line-height: 1;
+    font-weight: bold;
+}
+
+.sign-up__error:last-child {
+    margin-bottom: 20px;
 }
